--- a/extractor/templates/extractor/base.html
+++ b/extractor/templates/extractor/base.html
@@ -29,25 +29,19 @@
 	
 </head>
 <body>
-	<header class="site-header">
-	  <nav>
-	    <div class="header" id="myTopnav">
-	      <a class="logo" href="">Vidare</a>
-	      <div class="" id="navbarToggle">
-	        <div>
-	          <a class="title" href="">Home</a>
-	          <a class="" href="">Blog</a>
+	<header class="navbar navbar-dark bg-dark flex-md-nowrap p-0 ">
+		<a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Vidare</a>
+		<button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
+		<div class="navbar-nav">
+		  <div class="nav-item text-nowrap">
+			<a class="nav-link px-3" href="#">Sign out</a>
+		  </div>
+		</div>
+	  </header>
 
-	        </div>
-
-	        </div>
-	      </div>
-	    </div>
-	  </nav>
-	</header> 
-	<main role="main" class="container">
-		<div class="row">
-			<div class="col-md-8">
 				{% if messages %}
 					{% for message in messages %}
 						<div class="alert alert-{{ message.tags }}">
@@ -58,23 +52,6 @@
 				<br>
 	  			{% block content %}{% endblock %}
 				
-			</div>
-
-			<div class="col-md-4">
-		  		<div class="content-section">
-		   		 <h3>Our Sidebar</h3>
-			        <p class='text-muted'>You can put any information here you'd like.
-			          <ul class="list-group">
-			            <li class="list-group-item list-group-item-light">Latest Posts</li>
-			            <li class="list-group-item list-group-item-light">Announcements</li>
-			            <li class="list-group-item list-group-item-light">Calendars</li>
-			            <li class="list-group-item list-group-item-light">etc</li>
-			          </ul>
-			        </p>
-			    </div>
-			</div>
-		</div>
-	</main>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </body>
 </html>
