added template tags

--- a/extractor/templates/extractor/base.html
+++ b/extractor/templates/extractor/base.html
@@ -22,9 +22,9 @@
     
 
 	{% if title %}
-		<title>Captain Vee {{title}}</title>
+		<title>Vidare {{title}}</title>
 	{% else %}
-		<title>Captain Vee</title>
+		<title>Vidare</title>
 	{% endif %}
 	
 </head>
